# trebek

./: Cargo.toml  LICENSE  README.md  demo.yml
src/: constants.rs  lib.rs  main.rs  misc.rs  parser.rs  repl.rs  runner.rs  runtime.rs
src/builtins/: base.rs  conditional.rs  control_flow.rs  dict.rs  function.rs  internal_utils.rs  io.rs  list.rs  macros.rs  math.rs  mod.rs  scope.rs  string.rs
src/io_helpers/: input_stream.rs  output_stream.rs
src/lang/: builtins.rs  mod.rs  parser.rs  runner.rs  runtime.rs  scope.rs  types.rs
src/lang/builtins/: conditional.rs  control_flow.rs  function.rs  io.rs  math.rs  mod.rs  scope.rs
src/lang/io_helpers/: input_stream.rs  output_stream.rs
src/lang/memory/: gc.rs  mod.rs  object_heap.rs
src/lang/types/: builtin.rs  callable.rs  closure.rs  expression.rs  function.rs  list.rs  mod.rs  record.rs  scope.rs  t_object.rs  tobject.rs
src/memory/: gc.rs  mod.rs  object_heap.rs
src/stdlib/: __startup.tr
src/types/: builtin.rs  callable.rs  closure.rs  dict.rs  list.rs  macros.rs  mod.rs  scope.rs  string_literal.rs  symbol.rs  t_object.rs
tests/: sample_test.rs  test_programs.rs
tests/res/programs/conditional/: expected_output.txt  program.tr
tests/res/programs/fact/: expected_output.txt  program.tr
tests/res/programs/fib/: expected_output.txt  program.tr
tests/res/programs/func/: expected_output.txt  program.tr
tests/res/programs/print/: expected_output.txt  program.tr
tests/res/programs/scan/: expected_output.txt  program.tr
tests/res/programs/string/: program.tr
(+4 files in other folders)
