[package]
name = "trebek"
version = "0.1.0"
authors = ["Shadman Shadab <oneshadab@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "8.0.0"

[dev-dependencies]
test-generator = "0.3.0"
tempfile = "3.1.0"
